@@ -11,15 +11,11 @@ import com.ideas2it.healthcare.common.Constants;
 import com.ideas2it.healthcare.common.ErrorConstants;
 import com.ideas2it.healthcare.common.MessageConstants;
 import com.ideas2it.healthcare.dto.DoctorDto;
-import com.ideas2it.healthcare.exception.CustomException;
-import com.ideas2it.healthcare.exception.DataBaseException;
 import com.ideas2it.healthcare.mapper.DoctorMapper;
 import com.ideas2it.healthcare.model.Doctor;
 import com.ideas2it.healthcare.repository.DoctorRepository;
 import com.ideas2it.healthcare.service.DoctorService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.dao.DataAccessException;
-import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
@@ -48,18 +44,12 @@ public class DoctorServiceImpl implements DoctorService {
      * {@inheritDoc}
      */
     public String addOrUpdateDoctor(DoctorDto doctorDto) {
-        String response;
-        try {
-            doctorRepository.save(DoctorMapper.fromDto(doctorDto));
-            if (0 == doctorDto.getId()) {
-                response = MessageConstants.DOCTOR_ADDED_SUCCESSFULLY;
-            }
-            response = MessageConstants.DOCTOR_UPDATED_SUCCESSFULLY;
-        } catch (DataIntegrityViolationException exception) {
-            throw new CustomException(ErrorConstants.DOCTOR_ALREADY_EXISTS);
-        } catch (DataAccessException exception) {
-            throw new DataBaseException(ErrorConstants.DATABASE_NOT_ACCESSIBLE);
+        String response = null;
+        doctorRepository.save(DoctorMapper.fromDto(doctorDto));
+        if (0 == doctorDto.getId()) {
+            response = MessageConstants.DOCTOR_ADDED_SUCCESSFULLY;
         }
+        response = MessageConstants.DOCTOR_UPDATED_SUCCESSFULLY;
         return response;
     }
 
@@ -67,54 +57,39 @@ public class DoctorServiceImpl implements DoctorService {
      * {@inheritDoc}
      */
     public List<DoctorDto> getAllDoctors(Integer pageNumber, Integer totalRows) {
-        try {
-            List<Doctor> doctors = doctorRepository.findAllByStatus(Constants.ACTIVE,
-                    PageRequest.of(pageNumber, totalRows)).toList();
-            return doctors.stream().map(DoctorMapper::toDto).collect(Collectors.toList());
-        } catch (DataAccessException exception) {
-            throw new DataBaseException(ErrorConstants.DATABASE_NOT_ACCESSIBLE);
-        }
+        List<Doctor> doctors = doctorRepository.findAllByStatus(Constants.ACTIVE,
+                PageRequest.of(pageNumber, totalRows)).toList();
+        return doctors.stream().map(DoctorMapper::toDto).collect(Collectors.toList());
     }
 
     /**
      * {@inheritDoc}
      */
     public DoctorDto getDoctorById(Integer id) {
-        try {
-            return doctorRepository
-                    .findByIdAndStatus(id, Constants.ACTIVE)
-                    .stream()
-                    .map(DoctorMapper::toDto)
-                    .findFirst()
-                    .orElse(null);
-        } catch (DataAccessException exception) {
-            throw new DataBaseException(ErrorConstants.DATABASE_NOT_ACCESSIBLE);
-        }
+        return doctorRepository
+                .findByIdAndStatus(id, Constants.ACTIVE)
+                .stream()
+                .map(DoctorMapper::toDto)
+                .findFirst()
+                .orElse(null);
     }
 
     /**
      * {@inheritDoc}
      */
     public String removeDoctorById(Integer id) {
-        String response = ErrorConstants.DOCTOR_NOT_FOUND;
-        try {
-            if (1 <= doctorRepository.removeDoctorById(id)) {
-                response = MessageConstants.DOCTOR_REMOVED_SUCCESSFULLY;
-            }
-        } catch (DataAccessException exception) {
-            throw new DataBaseException(ErrorConstants.DATABASE_NOT_ACCESSIBLE);
+        String response = null;
+        if (1 <= doctorRepository.removeDoctorById(id)) {
+            response = MessageConstants.DOCTOR_REMOVED_SUCCESSFULLY;
         }
         return response;
     }
 
-    /**
-     * {@inheritDoc}
-     */
-    public Integer getDoctorsCount() {
-        try {
+        /**
+         * {@inheritDoc}
+         */
+        public Integer getDoctorsCount () {
             return doctorRepository.countByStatus(Constants.ACTIVE);
-        } catch (DataAccessException exception) {
-            throw new DataBaseException(ErrorConstants.DATABASE_NOT_ACCESSIBLE);
         }
     }
-}
+
